--- a/resume.template
+++ b/resume.template
@@ -35,7 +35,7 @@
         <h2>{{basics.location.city}}</h2>
         </div>
         <div class="col-md-6 col-sm-12">
-        <img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="{{basics.gravatar}}" style="width: 100px; height: 100px; margin-top: 20px;">
+        <img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="{{basics.picture}}" style="width: 100px; height: 100px; margin-top: 20px;">
 
         </div>
         </div>
